syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mukera.sheket.client.network";
option java_outer_classname = "SheketServiceProto";

package sheketproto;

service SheketService {
    rpc UserSignup (SingupRequest) returns (SignupResponse);

    rpc SyncCompanies (SyncCompanyRequest) returns (CompanyList);
    rpc EditUserName (EditUserNameRequest) returns (EmptyResponse);

    rpc CreateCompany (NewCompanyRequest) returns (Company);
    rpc EditCompany (EditCompanyRequest) returns (EmptyResponse);

    rpc AddEmployee (AddEmployeeRequest) returns (AddEmployeeResponse);

    rpc SyncEntity (EntityRequest) returns (EntityResponse);
    rpc SyncTransaction (TransactionRequest) returns (TransactionResponse);

    rpc IssuePayment (IssuePaymentRequest) returns (IssuePaymentResponse);
    rpc VerifyPayment (VerifyPaymentRequest) returns (VerifyPaymentResponse);
}

/**
 * Common Messages
 */
message EmptyRequest {
}
message EmptyResponse {
}

// Requests that require the user to be authenticated need to embed this.
message SheketAuth {
    string login_cookie = 1;
}

message CompanyID {
    int32 company_id = 1;
}

message CompanyAuth {
    SheketAuth sheketAuth = 1;
    CompanyID company_id = 2;
}
/**
 * END - Common Message
 */

message SingupRequest {
    string token = 1;
}

message SignupResponse {
    string username = 1;
    int32 user_id = 2;
    string login_cookie = 3;
}

message SyncCompanyRequest {
    SheketAuth auth = 1;
    int32 user_rev = 2;
    string device_id = 3;
    string local_user_time = 4;
}

message NewCompanyRequest {
    SheketAuth auth = 1;
    string company_name = 2;
    string device_id = 3;
    string local_user_time = 4;
}

message Company {
    int32 company_id = 1;
    string company_name = 2;
    string permission = 3;
    string signed_license = 4;

    // being able to generate payment_id at the server end gives us flexibilty
    string payment_id = 5;
}

message CompanyList {
    repeated Company companies = 1;
}

message EditUserNameRequest {
    SheketAuth auth = 1;
    string new_name = 2;
}

message AddEmployeeRequest {
    CompanyAuth companyAuth = 1;
    int32 employee_id = 2;
    string permission = 3;
}

message AddEmployeeResponse {
    int32 employee_id = 1;
    string employee_name = 2;
}

message IssuePaymentRequest {
    SheketAuth sheketAuth = 1;
    int32 company_id = 2;
    int32 contract_type = 3;
    int32 duration_days = 4;

    sint32 employee_limit = 5;
    sint32 branch_limit = 6;
    sint32 item_limit = 7;
}

message IssuePaymentResponse {
    int32 issued_company_id = 1;
    string payment_description = 2;
}

message VerifyPaymentRequest {
    CompanyAuth companyAuth = 1;
    string device_id = 2;
    string local_user_time = 3;
}

message VerifyPaymentResponse {
    string signed_license = 1;
}

message EditCompanyRequest{
    CompanyAuth companyAuth = 1;
    string new_name = 2;
}

message Item {
    sint32 item_id = 1;

    string name = 2;
    string code = 3;

    string UUID = 4;
    int32 status_flag = 5;

    sint32 category_id = 6;

    int32 unit_of_measurement = 7;
    bool has_derived_unit = 8;
    string derived_name = 9;
    double derived_factor = 10;
}

message Category {
    sint32 category_id = 1;

    string name = 2;
    sint32 parent_id = 3;

    string UUID = 4;
    int32 status_flag = 5;
}

message Branch {
    sint32 branch_id = 1;

    string name = 2;

    string UUID = 3;
    int32 status_flag = 4;
}

message Employee {
    int32 employee_id = 1;

    string name = 2;
    string permission = 3;
}

message BranchItem {
    sint32 branch_id = 1;
    sint32 item_id = 2;

    double quantity = 3;
    string shelf_location = 4;
}

message BranchCategory {
    sint32 branch_id = 1;
    sint32 category_id = 2;
}

message EntityRequest {
    enum Action {
        CREATE = 0;
        UPDATE = 1;
        DELETE = 2;
    }

    message RequestItem {
        Item item = 1;
        Action action = 2;
    }

    message RequestCategory {
        Category category = 1;
        Action action = 2;
    }

    message RequestBranch {
        Branch branch = 1;
        Action action = 2;
    }

    message RequestEmployee {
        Action action = 1;
        Employee employee = 2;
    }

    message RequestBranchItem {
        Action action = 1;
        BranchItem branchItem = 2;
    }

    message RequestBranchCategory {
        Action action = 1;
        BranchCategory branchCategory = 2;
    }

    repeated RequestItem items = 1;
    repeated RequestCategory categories = 2;
    repeated RequestBranch branches = 3;
    repeated RequestEmployee employees = 4;
    repeated RequestBranchItem branchItems = 5;
    repeated RequestBranchCategory branchCategories = 6;

    CompanyAuth companyAuth = 20;

    int32 old_category_rev = 21;
    int32 old_item_rev = 22;
    int32 old_branch_rev = 23;
    int32 old_branch_item_rev = 24;
    int32 old_member_rev = 25;
    int32 old_branch_category_rev = 26;
}

message EntityResponse {
    enum SyncState {
        // EXIST is the default state(so it can be left out).
        // If you deleted it, set it to REMOVED.
        EXIST = 0;
        REMOVED = 1;
    }

    message SyncItem {
        Item item = 1;
        SyncState state = 2;
    }

    message SyncCategory {
        Category category = 1;
        SyncState state = 2;
    }

    message SyncBranch {
        Branch branch = 1;
        SyncState state = 2;
    }

    message SyncEmployee {
        Employee employee = 1;
        SyncState state = 2;
    }

    message SyncBranchCategory {
        BranchCategory branchCategory = 1;
        SyncState state = 2;
    }

    message UpdatedId {
        // old_id is signed because it can be -ve
        sint32 old_id = 1;
        // new_id can't be -ve, so it is not signed
        int32 new_id = 2;
    }

    repeated UpdatedId updated_item_ids = 1;
    repeated UpdatedId updated_branch_ids = 2;
    repeated UpdatedId updated_category_ids = 3;

    repeated SyncItem items = 4;
    repeated SyncCategory categories = 5;
    repeated SyncBranch branches = 6;
    repeated SyncEmployee employees = 7;
    repeated SyncBranchCategory branchCategories = 8;

    // leave some gap till 15 so we can extend it

    int32 new_category_rev = 20;
    int32 new_item_rev = 21;
    int32 new_branch_rev = 22;
    int32 new_branch_item_rev = 23;
    int32 new_member_rev = 24;
    int32 new_branch_category_rev = 25;
}

message Transaction {
    message TransItem {
        int32 item_id = 2;
        int32 trans_type = 1;
        double quantity = 3;
        int32 other_branch_id = 4;
        string item_note = 5;
    }

    repeated TransItem transactionItems = 1;

    sint64 trans_id = 2;
    sint32 branch_id = 3;
    int64 date_time = 4;
    string trans_note = 5;
    string UUID = 6;
}

message TransactionRequest {
    repeated Transaction transactions = 1;

    CompanyAuth companyAuth = 2;

    int64 old_branch_item_rev = 3;
    int64 old_trans_rev = 4;
}

message TransactionResponse {
    message SyncTransaction {
        Transaction transaction = 1;
        int32 user_id = 2;
    }

    message SyncBranchItem {
        BranchItem branchItem = 1;
        EntityResponse.SyncState state = 2;
    }

    message UpdatedTransId {
        sint64 old_id = 1;
        int64 new_id = 2;
    }
    repeated SyncTransaction transactions = 1;
    repeated SyncBranchItem branchItems = 2;
    repeated UpdatedTransId updated_transaction_ids = 3;

    int64 new_branch_item_rev = 4;
    int64 new_trans_rev = 5;
}
